# Resume-api

./: alembic.ini  dockerfile  main.py  pyproject.toml  test.py
src/: settings.py
src/alembic/: env.py
src/alembic/versions/: 10c254f3efa0_create_resume_tabl.py  17527015388e_alter_resume2.py  5558463341b1_alter_resume.py  b2398e4ab2e0_alter_resume3.py
src/api/: app.py
src/api/resume/: routers.py  schemas.py
src/db/: base.py
src/db/models/: __init__.py  resume.py
